LIST OF CHANGES FOR NPG-QC PACKAGE

 - bam_flagstats autoqc result object - new field, subset, added; it replaces
   human_split field in result type evaluations; human_split is retained for now
   to be compatible with existing data and code
 - Using "jquery-unveil" plugin for heatmaps
 - Removing data from DOM after passing them to local variables
 - Nulling variables after using them for bcviz to free memory

release 58.5
 - stop using depricated Class::MOP::load_class method
 - use namespace::autoclean instead of "no Moose" in Moose objects
 - using make_immutable in Moose objects

release 58.4
 - Creating a cache in SeqStore model to reduce file system access. 
    Improving query - using keys for tables.
 - Moving FileFinder functionality into SeqQC from seq_commons.
 - Cache of catalyst actions and uri in template.
 - Templates are configured to be checked for changes every 10 hours.
 - Connections to database for fastqcheck are passed to model from 
    template.
 - Test modules catch/test for warnings for unitilized ids and for 
    cases where it was not possible to locate a folder.

release 58.3.1
 - Updating Readme in npg_qc_viewer for changes in deploy procedure.
 - Fixing qXYield total for run and sample, now it calculates from actual values 
    in the table, does not recalculate from collection.
 - genotype check: reduce min_sample_call_rate parameter for genotype match from 95% to 75%, and
     min_common_snps from 21 to 20. This will allow (Fluidigm) qc genotypes with 20 calls to be
    identified as possible duplicates when using the standard set of 26 QC SNPS (W30467)

release 58.3
 - default autoqc result object creation - do not set tag index to undef to
   avoid this field being set when serializing to json with newer Moose

release 58.2
 - convert local path to nfs for linked tools when building fastq_summ

release 58.1
 - compile fastq_summ with samtools-1.2 and htslib-1.2.1
 - Removing global functions from manual_qc.js