@@ -3,6 +3,7 @@ LIST OF CHANGES FOR NPG-QC PACKAGE
  - bam_flagstats autoqc result object - new field, subset, added; it replaces
    human_split field in result type evaluations; human_split is retained for now
    to be compatible with existing data and code
+ - autoqc loader will only load fields that correspond to database columns
  - Using "jquery-unveil" plugin for heatmaps
  - Removing data from DOM after passing them to local variables
  - Nulling variables after using them for bcviz to free memory
